--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "node server",
     "server": "nodemon server",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"yarn server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "dev": "concurrently \"yarn server\" \"npm run client\""
   },
   "dependencies": {
     "colors": "^1.4.0",
