--- a/client/package.json
+++ b/client/package.json
@@ -34,5 +34,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://flashcard4me.herokuapp.com/"
+  "proxy": "http://localhost:5000"
 }
